[gd_scene load_steps=62 format=3 uid="uid://duutpyaiwo465"]

[ext_resource type="Script" path="res://baddies/bosses/II/boss_ii.gd" id="1_0fev0"]
[ext_resource type="Script" path="res://components/health/health.gd" id="2_a6v0i"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="3_n30an"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/intro.gd" id="4_81ony"]
[ext_resource type="PackedScene" uid="uid://dihwftj02yegc" path="res://components/health_indicator/health_indicator.tscn" id="4_tkr4t"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_switch.gd" id="5_kfonc"]
[ext_resource type="PackedScene" uid="uid://bitvuxp6davs1" path="res://components/player_tracker/player_tracker.tscn" id="5_tnv5e"]
[ext_resource type="PackedScene" uid="uid://r22a0mmuikgy" path="res://components/blood_splatter/bleeder.tscn" id="6_0u0us"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_r.gd" id="6_jblrj"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_g.gd" id="7_1nbq1"]
[ext_resource type="PackedScene" uid="uid://b0h3spmyp72xm" path="res://components/shadow/shadow.tscn" id="7_4omnu"]
[ext_resource type="Shader" path="res://components/shadow/shadow.gdshader" id="8_62lpk"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_b.gd" id="8_dibvv"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_y.gd" id="9_8ydtp"]
[ext_resource type="Texture2D" uid="uid://d4emu1rl50g6" path="res://assets/textures/enemies/smallboss.png" id="9_w46dt"]
[ext_resource type="PackedScene" uid="uid://ck7giesvc1amw" path="res://components/height_sprite/height_sprite.tscn" id="10_qvcp3"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/enrage.gd" id="10_sgnos"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_er.gd" id="11_2fbrg"]
[ext_resource type="Shader" path="res://components/flash.gdshader" id="11_pfqg6"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_eg.gd" id="12_6mvsy"]
[ext_resource type="PackedScene" uid="uid://dvvktbgt1ayca" path="res://components/hurtbox/hurtbox.tscn" id="12_70yjx"]
[ext_resource type="PackedScene" uid="uid://bd83v7x2q3o7f" path="res://components/hitbox/hitbox.tscn" id="13_14jr4"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_eb.gd" id="13_uvyd8"]
[ext_resource type="AudioStream" uid="uid://d0xnc6eedy14y" path="res://assets/music/boss2b.ogg" id="14_c3d0n"]
[ext_resource type="Script" path="res://baddies/bosses/II/states/phase_ey.gd" id="14_vn2nc"]
[ext_resource type="AudioStream" uid="uid://cb82ols0mlxj3" path="res://assets/music/boss2a.ogg" id="15_aitnl"]
[ext_resource type="Texture2D" uid="uid://cskb633sejnhj" path="res://assets/textures/light_bullet_turned.png" id="23_8h8jt"]
[ext_resource type="Texture2D" uid="uid://cqgaoh3so0ind" path="res://assets/textures/fat_bullet_in.png" id="24_uy5lu"]
[ext_resource type="PackedScene" uid="uid://b1lcu4cgm3hjd" path="res://components/weapon/weapon_handler.tscn" id="29_jvlwt"]
[ext_resource type="Script" path="res://components/weapon/collision_data/collision_data.gd" id="30_lsfap"]
[ext_resource type="Script" path="res://components/weapon/weapon.gd" id="31_shes1"]
[ext_resource type="Resource" uid="uid://qncr7sq32wdw" path="res://baddies/bosses/II/tether.tres" id="32_n1bc0"]
[ext_resource type="Resource" uid="uid://cex1gtruq7qfm" path="res://baddies/bosses/II/megablast.tres" id="34_nbv5c"]
[ext_resource type="Resource" uid="uid://cryffs2cmo4we" path="res://baddies/bosses/II/blast_spam.tres" id="35_bo8m3"]
[ext_resource type="PackedScene" uid="uid://cvnyuall3fkis" path="res://components/weapon/attacks/laser/warning/laser_warning.tscn" id="36_abis4"]
[ext_resource type="Resource" uid="uid://etu0vsqumpl0" path="res://baddies/bosses/II/crash_bullets.tres" id="36_c8baj"]
[ext_resource type="Resource" uid="uid://yt64v7oe384y" path="res://baddies/bosses/II/crash_wave.tres" id="37_dtjo0"]
[ext_resource type="Resource" uid="uid://cqr3pbrkx4it5" path="res://baddies/bosses/II/tether2.tres" id="38_p1hst"]
[ext_resource type="Resource" uid="uid://bouh442bf4tgy" path="res://baddies/bosses/II/spamspin.tres" id="40_vqbhh"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_e5fj5"]
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fn2ap"]
size = Vector2(32, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jggci"]
resource_local_to_scene = true
shader = ExtResource("8_62lpk")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s8f5a"]
resource_local_to_scene = true
shader = ExtResource("8_62lpk")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_7sryx"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.753846, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_6nvxt"]
curve = SubResource("Curve_7sryx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oj1iw"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 512.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -300.0
radial_accel_max = -200.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_6nvxt")
color = Color(0.678431, 0, 0, 0.501961)

[sub_resource type="Curve" id="Curve_0b3g1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_8pu4o"]
curve = SubResource("Curve_0b3g1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tvgu5"]
lifetime_randomness = 1.0
particle_flag_align_y = true
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
damping_min = 500.0
damping_max = 700.0
scale_min = 2.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_8pu4o")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3r0qg"]
resource_local_to_scene = true
shader = ExtResource("11_pfqg6")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xmmje"]
resource_local_to_scene = true
shader = ExtResource("11_pfqg6")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ansyg"]
size = Vector2(44, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3npjd"]
size = Vector2(32, 32)

[sub_resource type="Resource" id="Resource_dtefi"]
script = ExtResource("30_lsfap")
collision_layer = 32
collision_mask = 4

[sub_resource type="Resource" id="Resource_feoly"]
script = ExtResource("30_lsfap")
collision_layer = 32
collision_mask = 4

[sub_resource type="Resource" id="Resource_t846a"]
script = ExtResource("30_lsfap")
collision_layer = 32
collision_mask = 4

[sub_resource type="Resource" id="Resource_l055l"]
script = ExtResource("30_lsfap")
collision_layer = 32
collision_mask = 4

[sub_resource type="Resource" id="Resource_hjq5p"]
script = ExtResource("30_lsfap")
collision_layer = 32
collision_mask = 4

[sub_resource type="Curve" id="Curve_gfr2g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bn4hu"]
curve = SubResource("Curve_gfr2g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2ayym"]
lifetime_randomness = 0.54
particle_flag_align_y = true
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
gravity = Vector3(0, 0, 0)
damping_min = 400.0
damping_max = 600.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_bn4hu")

[node name="BossII" type="RigidBody2D" node_paths=PackedStringArray("coll_shape", "hurt_coll_shape", "hit_coll_shape", "hurtbox", "hitbox", "health", "health_indicator", "player_tracker", "sprite", "shadow", "bleeder", "hurt_sfx", "boss_music_1", "boss_music_2") groups=["bosses"]]
collision_layer = 10
physics_material_override = SubResource("PhysicsMaterial_e5fj5")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource("1_0fev0")
coll_shape = NodePath("CollisionShape2D")
hurt_coll_shape = NodePath("Hurtbox/CollisionShape2D")
hit_coll_shape = NodePath("Hitbox/CollisionShape2D")
hurtbox = NodePath("Hurtbox")
hitbox = NodePath("Hitbox")
health = NodePath("Health")
health_indicator = NodePath("HealthIndicator")
player_tracker = NodePath("PlayerTracker")
sprite = NodePath("HeightSprite")
shadow = NodePath("Shadow")
bleeder = NodePath("Bleeder")
hurt_sfx = NodePath("HurtSFX")
boss_music_1 = NodePath("BossMusic1")
boss_music_2 = NodePath("BossMusic2")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_a6v0i")
max_health = 300

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_n30an")
initial_state = NodePath("Intro")

[node name="Intro" type="Node" parent="StateMachine" node_paths=PackedStringArray("grow_timer", "intro_vfx")]
script = ExtResource("4_81ony")
grow_timer = NodePath("GrowTimer")
intro_vfx = NodePath("../../IntroVFX")

[node name="GrowTimer" type="Timer" parent="StateMachine/Intro"]
wait_time = 0.7

[node name="PhaseSwitch" type="Node" parent="StateMachine"]
script = ExtResource("5_kfonc")

[node name="R" type="Node" parent="StateMachine" node_paths=PackedStringArray("weapon", "tether_vfx")]
script = ExtResource("6_jblrj")
max_shots = 30
weapon = NodePath("../../TetherAura")
tether_vfx = NodePath("../../Tether")

[node name="G" type="Node" parent="StateMachine" node_paths=PackedStringArray("sniper", "snipe_warning", "steering")]
script = ExtResource("7_1nbq1")
sniper = NodePath("../../Sniper")
snipe_warning = NodePath("../../SnipeWarning")
steering = NodePath("../../Steering")

[node name="B" type="Node" parent="StateMachine" node_paths=PackedStringArray("dig_timer", "dig_vfx", "crash_wpn")]
script = ExtResource("8_dibvv")
dig_timer = NodePath("DigTimer")
dig_vfx = NodePath("../../DigVFX")
crash_wpn = NodePath("../../Crash")

[node name="DigTimer" type="Timer" parent="StateMachine/B"]
one_shot = true

[node name="Y" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_timer", "steering")]
script = ExtResource("9_8ydtp")
dash_speed = 600.0
vibe_speed = 500.0
turn_speed = 5.0
predict_speed = 4.0
dash_timer = NodePath("DashTimer")
steering = NodePath("../../Steering")

[node name="DashTimer" type="Timer" parent="StateMachine/Y"]
one_shot = true

[node name="Enrage" type="Node" parent="StateMachine"]
script = ExtResource("10_sgnos")

[node name="ER" type="Node" parent="StateMachine"]
script = ExtResource("11_2fbrg")

[node name="EG" type="Node" parent="StateMachine"]
script = ExtResource("12_6mvsy")

[node name="EB" type="Node" parent="StateMachine"]
script = ExtResource("13_uvyd8")

[node name="EY" type="Node" parent="StateMachine"]
script = ExtResource("14_vn2nc")

[node name="HealthIndicator" parent="." instance=ExtResource("4_tkr4t")]
entity_name = "BOSS II"
radius = 48.0
name_radius = 32.0
ring_width = 4.0
hurt_color = Color(1, 1, 1, 0.2)
outline_color = Color(1, 1, 1, 0.2)

[node name="PlayerTracker" parent="." instance=ExtResource("5_tnv5e")]
modulate = Color(1, 1, 1, 0)
width = 2.0

[node name="Bleeder" parent="." instance=ExtResource("6_0u0us")]
blood_color = Color(1, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fn2ap")

[node name="Shadow" parent="." node_paths=PackedStringArray("caster") instance=ExtResource("7_4omnu")]
material = SubResource("ShaderMaterial_jggci")
texture = ExtResource("9_w46dt")
caster = NodePath("../HeightSprite")

[node name="Shadow2" parent="." node_paths=PackedStringArray("caster") instance=ExtResource("7_4omnu")]
material = SubResource("ShaderMaterial_s8f5a")
caster = NodePath("../HeightSprite2")

[node name="Tether" type="GPUParticles2D" parent="."]
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_oj1iw")
texture = ExtResource("23_8h8jt")
visibility_rect = Rect2(-768, -768, 1536, 1536)

[node name="DigVFX" type="GPUParticles2D" parent="." groups=["enemies", "mages"]]
modulate = Color(0, 0, 0.501961, 1)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_tvgu5")
texture = ExtResource("24_uy5lu")

[node name="HeightSprite" parent="." instance=ExtResource("10_qvcp3")]
material = SubResource("ShaderMaterial_3r0qg")
texture = ExtResource("9_w46dt")

[node name="HeightSprite2" parent="." instance=ExtResource("10_qvcp3")]
material = SubResource("ShaderMaterial_xmmje")

[node name="Hurtbox" parent="." instance=ExtResource("12_70yjx")]
knockback_modifier = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_ansyg")
disabled = true

[node name="Hitbox" parent="." instance=ExtResource("13_14jr4")]
damage = 2
damage_cooldown = 1.0
knockback_strength = 128.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_3npjd")
disabled = true

[node name="BossMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_aitnl")
volume_db = -10.0
bus = &"music"

[node name="BossMusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_c3d0n")
volume_db = -10.0
bus = &"music"

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
max_distance = 512.0
bus = &"sfx"

[node name="DieSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = 5.0
max_distance = 512.0
bus = &"sfx"

[node name="TetherAura" parent="." instance=ExtResource("29_jvlwt")]
muzzle_distance = 32.0
muzzle_is_origin = false
collision_data = SubResource("Resource_dtefi")
weapons = Array[ExtResource("31_shes1")]([ExtResource("32_n1bc0")])

[node name="Sniper" parent="." instance=ExtResource("29_jvlwt")]
muzzle_distance = 24.0
collision_data = SubResource("Resource_feoly")
weapons = Array[ExtResource("31_shes1")]([ExtResource("34_nbv5c"), ExtResource("35_bo8m3")])

[node name="Crash" parent="." instance=ExtResource("29_jvlwt")]
muzzle_distance = 0.0
muzzle_is_origin = false
collision_data = SubResource("Resource_t846a")
weapons = Array[ExtResource("31_shes1")]([ExtResource("37_dtjo0"), ExtResource("36_c8baj")])

[node name="TetherAura2" parent="." instance=ExtResource("29_jvlwt")]
muzzle_distance = 32.0
muzzle_is_origin = false
collision_data = SubResource("Resource_l055l")
weapons = Array[ExtResource("31_shes1")]([ExtResource("38_p1hst")])

[node name="SpamSpin" parent="." instance=ExtResource("29_jvlwt")]
muzzle_distance = 32.0
muzzle_is_origin = false
collision_data = SubResource("Resource_hjq5p")
weapons = Array[ExtResource("31_shes1")]([ExtResource("40_vqbhh")])

[node name="SnipeWarning" parent="." instance=ExtResource("36_abis4")]
active = false
muzzle_dist = 12.0
color = Color(0.2, 1, 0.2, 1)
width = 24.0
cool_down = 2.0

[node name="Steering" type="Marker2D" parent="."]

[node name="IntroVFX" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_2ayym")
texture = ExtResource("23_8h8jt")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="color_set" from="." to="StateMachine/R" method="_on_boss_ii_color_set"]
[connection signal="color_set" from="." to="StateMachine/G" method="_on_boss_ii_color_set"]
[connection signal="color_set" from="." to="StateMachine/B" method="_on_boss_ii_color_set"]
[connection signal="color_set" from="." to="StateMachine/Y" method="_on_boss_ii_color_set"]
[connection signal="was_hurt" from="Health" to="StateMachine/Enrage" method="_on_health_was_hurt"]
[connection signal="timeout" from="StateMachine/Intro/GrowTimer" to="StateMachine/Intro" method="_on_grow_timer_timeout"]
[connection signal="timeout" from="StateMachine/B/DigTimer" to="StateMachine/B" method="_on_dig_timer_timeout"]
[connection signal="timeout" from="StateMachine/Y/DashTimer" to="StateMachine/Y" method="_on_dash_timer_timeout"]
[connection signal="ground_hit" from="HeightSprite" to="StateMachine/B" method="_on_height_sprite_ground_hit"]
[connection signal="height_changed" from="HeightSprite" to="." method="_on_height_sprite_height_changed"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="knocked_back" from="Hurtbox" to="." method="_on_hurtbox_knocked_back"]
[connection signal="fired" from="TetherAura" to="StateMachine/R" method="_on_tether_aura_fired"]
[connection signal="fired" from="Sniper" to="StateMachine/G" method="_on_sniper_fired"]
[connection signal="fired" from="SnipeWarning" to="StateMachine/G" method="_on_snipe_warning_fired"]
